k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: replay-chess
  labels:
    name: replay-chess
